src/tests/snapshots/cargo_vet__tests__vet__builtin-dev-detection-empty.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "context": null,
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "name": "both",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-deploy"
      ]
    },
    {
      "name": "dev-cycle-direct",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-run"
      ]
    },
    {
      "name": "normal",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-deploy"
      ]
    },
    {
      "name": "simple-dev",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-run"
      ]
    }
  ],
  "suggest": {
    "suggestions": [
      {
        "name": "both",
        "notable_parents": "root",
        "suggested_criteria": [
          "safe-to-deploy"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "raw": "+100",
            "count": 100
          }
        }
      },
      {
        "name": "dev-cycle-direct",
        "notable_parents": "root",
        "suggested_criteria": [
          "safe-to-run"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "raw": "+100",
            "count": 100
          }
        }
      },
      {
        "name": "normal",
        "notable_parents": "root",
        "suggested_criteria": [
          "safe-to-deploy"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "raw": "+100",
            "count": 100
          }
        }
      },
      {
        "name": "simple-dev",
        "notable_parents": "root",
        "suggested_criteria": [
          "safe-to-run"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "raw": "+100",
            "count": 100
          }
        }
      }
    ],
    "suggest_by_criteria": {
      "safe-to-deploy": [
        {
          "name": "both",
          "notable_parents": "root",
          "suggested_criteria": [
            "safe-to-deploy"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "raw": "+100",
              "count": 100
            }
          }
        },
        {
          "name": "normal",
          "notable_parents": "root",
          "suggested_criteria": [
            "safe-to-deploy"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "raw": "+100",
              "count": 100
            }
          }
        }
      ],
      "safe-to-run": [
        {
          "name": "dev-cycle-direct",
          "notable_parents": "root",
          "suggested_criteria": [
            "safe-to-run"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "raw": "+100",
              "count": 100
            }
          }
        },
        {
          "name": "simple-dev",
          "notable_parents": "root",
          "suggested_criteria": [
            "safe-to-run"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "raw": "+100",
              "count": 100
            }
          }
        }
      ]
    },
    "total_lines": 400
  }
}
