src/tests/snapshots/cargo_vet__tests__vet__builtin-simple-delta-broken-double-cycle.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "context": null,
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "name": "third-party1",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-deploy"
      ]
    }
  ],
  "suggest": {
    "suggestions": [
      {
        "name": "third-party1",
        "notable_parents": "first-party",
        "suggested_criteria": [
          "safe-to-deploy"
        ],
        "suggested_diff": {
          "from": "4.0.0",
          "to": "5.0.0",
          "diffstat": {
            "raw": "+9",
            "count": 9
          }
        }
      }
    ],
    "suggest_by_criteria": {
      "safe-to-deploy": [
        {
          "name": "third-party1",
          "notable_parents": "first-party",
          "suggested_criteria": [
            "safe-to-deploy"
          ],
          "suggested_diff": {
            "from": "4.0.0",
            "to": "5.0.0",
            "diffstat": {
              "raw": "+9",
              "count": 9
            }
          }
        }
      ]
    },
    "total_lines": 9
  }
}
