src/tests/snapshots/cargo_vet__tests__vet__builtin-simple-deps-no-unaudited.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "context": null,
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "name": "build",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-deploy"
      ]
    },
    {
      "name": "build-proc-macro",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-deploy"
      ]
    },
    {
      "name": "dev",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-run"
      ]
    },
    {
      "name": "dev-proc-macro",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-run"
      ]
    },
    {
      "name": "normal",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-deploy"
      ]
    },
    {
      "name": "proc-macro",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-deploy"
      ]
    }
  ],
  "suggest": {
    "suggestions": [
      {
        "name": "build",
        "notable_parents": "root",
        "suggested_criteria": [
          "safe-to-deploy"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "raw": "+100",
            "count": 100
          }
        },
        "confident": true
      },
      {
        "name": "build-proc-macro",
        "notable_parents": "root",
        "suggested_criteria": [
          "safe-to-deploy"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "raw": "+100",
            "count": 100
          }
        },
        "confident": true
      },
      {
        "name": "dev",
        "notable_parents": "root",
        "suggested_criteria": [
          "safe-to-run"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "raw": "+100",
            "count": 100
          }
        },
        "confident": true
      },
      {
        "name": "dev-proc-macro",
        "notable_parents": "root",
        "suggested_criteria": [
          "safe-to-run"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "raw": "+100",
            "count": 100
          }
        },
        "confident": true
      },
      {
        "name": "normal",
        "notable_parents": "root",
        "suggested_criteria": [
          "safe-to-deploy"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "raw": "+100",
            "count": 100
          }
        },
        "confident": true
      },
      {
        "name": "proc-macro",
        "notable_parents": "root",
        "suggested_criteria": [
          "safe-to-deploy"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "raw": "+100",
            "count": 100
          }
        },
        "confident": true
      }
    ],
    "suggest_by_criteria": {
      "safe-to-deploy": [
        {
          "name": "build",
          "notable_parents": "root",
          "suggested_criteria": [
            "safe-to-deploy"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "raw": "+100",
              "count": 100
            }
          },
          "confident": true
        },
        {
          "name": "build-proc-macro",
          "notable_parents": "root",
          "suggested_criteria": [
            "safe-to-deploy"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "raw": "+100",
              "count": 100
            }
          },
          "confident": true
        },
        {
          "name": "normal",
          "notable_parents": "root",
          "suggested_criteria": [
            "safe-to-deploy"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "raw": "+100",
              "count": 100
            }
          },
          "confident": true
        },
        {
          "name": "proc-macro",
          "notable_parents": "root",
          "suggested_criteria": [
            "safe-to-deploy"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "raw": "+100",
              "count": 100
            }
          },
          "confident": true
        }
      ],
      "safe-to-run": [
        {
          "name": "dev",
          "notable_parents": "root",
          "suggested_criteria": [
            "safe-to-run"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "raw": "+100",
              "count": 100
            }
          },
          "confident": true
        },
        {
          "name": "dev-proc-macro",
          "notable_parents": "root",
          "suggested_criteria": [
            "safe-to-run"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "raw": "+100",
              "count": 100
            }
          },
          "confident": true
        }
      ]
    },
    "total_lines": 600
  }
}
